<resources>
    <string name="app_name" translatable="false">GeoApp</string>
    <string name="action_settings">Settings</string>
    <string name="find_geo_location_title">Geo Message</string>
    <string name="find_geo_location_msg">Searching location please wait...</string>
    <string name="enter_to_shift_btn">Enter</string>
    <string name="exit_fron_shifn_btn">Exit</string>
    <string name="enter_to_shift_msg">press Enter to start shift</string>
    <string name="pref_title_sync_frequency">pref_title_sync_fr</string>
    <string name="pref_title_system_sync_settings">pref_title_system_sync_settings</string>
    <string name="title_activity_maps">title_activity_maps</string>
    <string name="title_activity_icon_tabs">title_activity_icon_tabs</string>
    <string name="exit">Exit</string>
    <string name="table_shift_number">Shift ID</string>
    <string name="shift_number">Shift Number</string>
    <string name="table_enter_time">Enter Time</string>
    <string name="shift_enter_time">Enter Time</string>
    <string name="table_enter_location">Location</string>
    <string name="table_end_time">Exit time</string>
    <string name="table_exit_location">Exit Location</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!--- Facebook-->
    <string name="facebook_app_id">1712900328965879</string>
    <string name="google_app_id">AIzaSyC7pLYoDfk2F5mygsINy6uh5DPJflXhlbw</string>
    <string name="gps_service">Do you want to open GPS service?</string>
    <string name="gps_enable">GPS Enable</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter">Enter</string>
    <string name="exit_to_shift_msg">To Exit form Shift Press Exit</string>
    <string name="enter_anyway">Enter anyway</string>
    <string name="exit_any_way">Exit anyway</string>
    <string name="title_activity_ad_">Ad_Activity</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="sign_in_txt">Sign In</string>
    <string name="null1" />
    <string name="field_error">Error one or more fields are empty</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="tz">ID</string>
    <string name="worker">Worker</string>
    <string name="manager">Manager</string>
    <string name="login">Login</string>
    <string name="signin">SignIn</string>
    <string name="email_exist">Email all ready exist</string>
    <string name="setting">Settings</string>
    <string name="logout">Logout</string>
    <string name="enter_comapny_code">Enter comapny code</string>
    <string name="edit_comapny_code">Edit Comapny code</string>
    <string name="new_company">New Company</string>
    <string name="company_name">Company Name</string>
    <string name="company_address">Company Address</string>
    <string name="location_latitude">Location Latitude</string>
    <string name="location_longitude">Location Longitude</string>
    <string name="create">Create</string>
    <string name="company_empty_name">Must to fill at least company name field.</string>
    <string name="company_created">Company was created.</string>
    <string name="select_worker">Select Worker</string>
    <string name="login_automatically">Login Automatically</string>
    <string name="send_email_monthly_employees_rrating">Send email monthly employees rating</string>
    <string name="company_code">Company Code</string>


</resources>
