<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="info.androidhive.materialtabs.activity.SignIn_Activity"
    android:background="@drawable/background2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sign_in_txt"
        android:id="@+id/company_label"
        android:layout_below="@+id/imageView9"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName|text"
        android:ems="10"
        android:id="@+id/company_name"
        android:gravity="center_horizontal"
        android:editable="true"
        android:clickable="true"
        android:layout_below="@+id/company_label"
        android:layout_alignLeft="@+id/phone_field"
        android:layout_alignStart="@+id/phone_field"
        android:singleLine="true"
        android:hint="@string/first_name"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/company_address"
        android:layout_below="@+id/company_name"
        android:layout_alignLeft="@+id/company_name"
        android:layout_alignStart="@+id/company_name"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:hint="@string/last_name"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/company_location_latitude"
        android:layout_below="@+id/company_address"
        android:layout_alignLeft="@+id/company_address"
        android:layout_alignStart="@+id/company_address"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:hint="@string/email"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/company_location_longitude"
        android:layout_below="@+id/company_location_latitude"
        android:layout_alignLeft="@+id/company_location_latitude"
        android:layout_alignStart="@+id/company_location_latitude"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:hint="@string/password"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/tz_field"
        android:layout_below="@+id/phone_field"
        android:layout_alignLeft="@+id/phone_field"
        android:layout_alignStart="@+id/phone_field"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:hint="@string/tz"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/phone_field"
        android:layout_below="@+id/company_location_longitude"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:hint="@string/phone_number"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radio_role_group"
        android:orientation="horizontal"
        android:layout_below="@+id/tz_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/worker_radio_btn"
            android:checked="true"
            android:text="@string/worker"
            android:layout_marginRight="15dp"
            android:nestedScrollingEnabled="false"
            android:textColor="@android:color/white" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/manager_radio_btn"
            android:checked="false"
            android:text="@string/manager"
            android:layout_marginLeft="15dp"
            android:textColor="@android:color/white" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:id="@+id/company_create_btn"
        android:onClick="on_click_enter_btn"
        android:layout_below="@+id/radio_role_group"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:background="@drawable/button" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:id="@+id/error_txt"
        android:layout_below="@+id/company_create_btn"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="#fb0202"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/imageView9"
        android:src="@mipmap/icon_enter"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
