<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="info.androidhive.materialtabs.activity.createNewCompany"
    android:background="@drawable/background2">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_company"
        android:id="@+id/company_label"
        android:layout_below="@+id/imageView9"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:paddingBottom="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName|text"
        android:ems="10"
        android:id="@+id/company_name"
        android:gravity="center_horizontal"
        android:editable="true"
        android:clickable="true"
        android:layout_below="@+id/company_label"
        android:singleLine="true"
        android:hint="@string/company_name"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/company_address"
        android:layout_below="@+id/company_name"
        android:layout_alignLeft="@+id/company_name"
        android:layout_alignStart="@+id/company_name"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:hint="@string/company_address"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/company_location_latitude"
        android:layout_below="@+id/company_address"
        android:layout_alignLeft="@+id/company_address"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:hint="@string/location_latitude"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:inputType="number" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/company_location_longitude"
        android:layout_below="@+id/company_location_latitude"
        android:layout_alignLeft="@+id/company_location_latitude"
        android:layout_alignStart="@+id/company_location_latitude"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:hint="@string/location_longitude"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:inputType="number" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:id="@+id/company_create_btn"
        android:onClick="onClickCreateCompany"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:background="@drawable/button"
        android:layout_below="@+id/company_location_longitude" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:id="@+id/errorMsg"
        android:layout_below="@+id/company_create_btn"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="#fb0202"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/imageView9"
        android:src="@mipmap/icon_enter"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
